kubernetes/jenkins-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
  selector:
    app: jenkins-direct

---
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins-nodeport
  namespace: default
subsets:
- addresses:
  - ip: 4.180.158.190  # Master node IP where Docker Jenkins is running
  ports:
  - port: 8080
    name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-domain-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - jenkins.yourdomain.com
    secretName: jenkins-domain-tls
  rules:
  - host: jenkins.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-nodeport
            port:
              number: 8080
